--- a/index.css
+++ b/index.css
@@ -10,7 +10,9 @@
 /* Page Container */
 .container{
     width: 1320px;
+    max-width: 1366px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 /* Header Section CSS */
@@ -76,7 +78,7 @@ header .call-us-back-btn{
 .banner-section::before{
     content: '';
     width: 200px;
-    height: 100%;
+    height: 600px;
     position: absolute;
     padding-top: 20px;
     /* border-radius: 200px; */
